--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="wrapper">
       <header>
         <h1>Alexander_tsuetaki</h1>
-        <p>My_Website</p>
+        <p>My_Fiefdom</p>
 
 
         <p class="view"><a href="https://github.com/AlexanderTsuetaki">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <h3>
-<a id="About_Me" class="anchor" href="#About_Me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to My Little Fiefdom.</h3>
+<h3>
+<a id="About_Me" class="anchor" href="#About_Me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
 <p>Alexander Tsuetaki is a Junior at Tufts University Majoring in Computer Science. He is currently empolyed as a reasearch assistant at Tufts's Human Robotics Interaction Lab. </p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<a id="Projects" class="anchor" href="#Projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
+<p></p>
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
